# portfolio

./: README.md  index.html  main.css
pages/: index.hbs  index.yml  main.css
pages/contact/: index.hbs  index.yml
pages/projects/: data.yml  index.hbs  index.yml
pages/source-code/: index.hbs
pages/static/: Projects.html
pages/static/Projects_files/: main.css  main.txt
public/: index.html  main.css
server/: .gitignore  Cargo.toml
server/src/: error.rs  extractors.rs  main.rs  options.rs  pages.rs  templates.rs
server/src/templates/: helpers.rs
sketches/: LinkedIn_Logo.afdesign  sketch.afdesign
templates/: base.hbs  sidebar.hbs
