[package]
name = "server"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
handlebars = "2.0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.9"
failure = "0.1.5"
log = "0.4.8"
structopt = "0.3.2"
actix-files = "0.1.7"
env_logger = "0.6.2"
serde_json = "1.0.40"
arc-swap = "0.4.3"
notify = "4.0.13"
